--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,31 @@
+@media(max-width:1330px) {
+    .servicos {
+        .container-servicos {
+            .servico-content {
+                .title-content-servico {
+                    h1 {
+                        font-size: 25px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:1075px) {
+    .servicos {
+        .container-servicos {
+            .servico-content {
+                .title-content-servico {
+                    h1 {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media(max-width:1050px) {
     .navbar {
         .nav-container {
@@ -9,6 +37,10 @@
                 }
             }
         }
+    }
+
+    .slider {
+        width: 90%;
     }
 }
 
@@ -126,11 +158,13 @@
                 #number2 {
                     margin-top: 0;
                     height: 100%;
-                    .text-processo{
-                        strong{
+
+                    .text-processo {
+                        strong {
                             font-size: 15px;
                         }
-                        p{
+
+                        p {
                             font-size: 15px;
                         }
                     }
@@ -142,7 +176,8 @@
                     strong {
                         font-size: 15px;
                     }
-                    p{
+
+                    p {
                         font-size: 15px;
                     }
                 }
@@ -157,6 +192,36 @@
                 justify-content: center;
             }
 
+        }
+    }
+
+    .controls {
+        display: none;
+    }
+    .servicos{
+        .container-servicos{
+            .servico-content{
+                .button-content-servico{
+                    a{
+                        border: 2px solid var(--color-blue);
+                        color: var(--dark-blue);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:860px) {
+    .servicos {
+        .container-servicos {
+            .servico-content {
+                .title-content-servico {
+                    h1 {
+                        font-size: 15px;
+                    }
+                }
+            }
         }
     }
 }
@@ -204,6 +269,22 @@
         }
     }
 
+    .servicos {
+        padding: 0;
+
+        .container-servicos {
+            display: flex;
+            flex-direction: column;
+            .servico-content{
+                .title-content-servico{
+                    h1{
+                        font-size: 20px;
+                    }
+                }
+               
+            }
+        }
+    }
 }
 
 @media(max-width:450px) {
@@ -219,6 +300,7 @@
                 }
             }
         }
+
     }
 
     .inicio .inicio-container .text-container-inicio .title-container-inicio {
@@ -255,5 +337,9 @@
                 }
             }
         }
+    }
+
+    .slider {
+        width: 95%;
     }
 }
