--- a/style/color.css
+++ b/style/color.css
@@ -2,6 +2,7 @@
 
     --color-white:#ececec;
     --color-blue:#0843ff;
+    --light-blue:#718ee7;
     --dark-blue:#002292;
     --color-black:#000000;
     --color-green: #08ff1b;
