--- a/style/media.css
+++ b/style/media.css
@@ -173,7 +173,7 @@
 
                 .container-number {
                     width: 100%;
-
+                    margin: 20px 0;
                     strong {
                         font-size: 15px;
                     }
